--- a/user-client/src/assets/scss/App.scss
+++ b/user-client/src/assets/scss/App.scss
@@ -58,10 +58,34 @@ body {
     color: #fff;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 
+    transition: all 0.3s;
+
     &:hover {
       color: #fff !important;
       background-color: $color-link-highlight;
       box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
+    }
+
+    &.active {
+      color: #fff !important;
+      background-color: $color-link-highlight;
+    }
+
+    &.reverse {
+      background-color: #fff;
+      color: $color-link;
+      // border: 1px solid #ccc;
+      outline: none;
+
+      &:hover {
+        color: #fff !important;
+        background-color: $color-link-highlight;
+      }
+
+      &.active {
+        color: #fff !important;
+        background-color: $color-link-highlight;
+      }
     }
   }
 }
