--- a/user-client/src/assets/scss/AuthForm.scss
+++ b/user-client/src/assets/scss/AuthForm.scss
@@ -24,5 +24,15 @@
         margin-right: 10px;
       }
     }
+
+    .job-selection {
+      text-align: center;
+
+      .job-buttons {
+        button {
+          font-weight: 500;
+        }
+      }
+    }
   }
 }
