--- a/user-client/src/assets/scss/App.scss
+++ b/user-client/src/assets/scss/App.scss
@@ -75,6 +75,7 @@ body {
       background-color: #fff;
       color: $color-link;
       // border: 1px solid #ccc;
+      border: none;
       outline: none;
 
       &:hover {
