--- a/admin-client/src/App.css
+++ b/admin-client/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -19,4 +19,9 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.logo {
+  height: 32px;
+  margin: 16px;
 }
