--- a/user-client/src/assets/scss/App.scss
+++ b/user-client/src/assets/scss/App.scss
@@ -113,3 +113,9 @@ body {
   background-color: transparent;
   border: none;
 }
+
+.account-layout {
+  .active-link {
+    color: $color-link;
+  }
+}
