add categories and show in nav, show teaching info and update price/h. show tags and form select tag

--- a/user-client/src/assets/scss/App.scss
+++ b/user-client/src/assets/scss/App.scss
@@ -119,3 +119,13 @@ body {
     color: $color-link;
   }
 }
+
+.profile {
+  table.teaching-info {
+    border-collapse: separate;
+    border-spacing: 30px 15px;
+    td {
+      vertical-align: top;
+    }
+  }
+}
