--- a/user-client/src/assets/scss/Chat.scss
+++ b/user-client/src/assets/scss/Chat.scss
@@ -41,10 +41,10 @@
     }
 
     .messages {
-      overflow-y: auto;
+      overflow-y: scroll;
       height: calc(100% - 45px);
       width: 100%;
-      // background: #000;
+      padding-right: 10px;
 
       .list {
         list-style-type: none;
@@ -97,13 +97,12 @@
 
 .scroll {
   &::-webkit-scrollbar {
-    width: 0px;
+    width: 7px;
     opacity: 0;
     transition: all 5s ease;
   }
   &:hover {
     &::-webkit-scrollbar {
-      width: 7px;
       opacity: 1;
     }
   }
