fix scroll error, separate routes in profile route

--- a/user-client/src/assets/scss/App.scss
+++ b/user-client/src/assets/scss/App.scss
@@ -273,3 +273,9 @@ body {
   font-size: 80%;
   color: #dc3545;
 }
+
+.router-tabs {
+  border: 1px solid transparent;
+  border-top-width: 2px;
+  border-bottom: 1px solid #ddd;
+}
