api to request new contract

--- a/user-client/src/assets/scss/Chat.scss
+++ b/user-client/src/assets/scss/Chat.scss
@@ -55,6 +55,7 @@
             background: #f1f0f0;
             padding: 10px 15px;
             display: inline-block;
+            text-align: left;
           }
 
           &:first-child {
